tests/snapshots/subsup_subsup.snap
---
source: tests/scripted/mod.rs
expression: out
---
<math><msubsup><mi>x</mi><mi>0</mi><mi>1</mi></msubsup></math>
