tests/snapshots/subsup_summation.snap
---
source: tests/scripted/mod.rs
expression: out
---
<math display="block"><msubsup><mo>∑</mo><mrow><mi>i</mi><mo>=</mo><mn>0</mn></mrow><mi>k</mi></msubsup><msup><mn>2</mn><mi>i</mi></msup></math>
