tests/snapshots/underover_over_brace.snap
---
source: tests/scripted/mod.rs
expression: input
---
<math>
  <mover>
    <mrow>
      <mn>
        1
      </mn>
      <mo>
        +
      </mo>
      <mn>
        2
      </mn>
    </mrow>
    <mover>
      <mo>
        ⏞
      </mo>
      <mtext>
        Some expression
      </mtext>
    </mover>
  </mover>
</math>

