tests/snapshots/underover_under_brace.snap
---
source: tests/scripted/mod.rs
expression: out
---
<math ><munder ><mrow ><mn >1</mn><mo >+</mo><mn >2</mn></mrow><munder ><mo >⏟</mo><mtext >Some expression</mtext></munder></munder></math>
